--- a/webservice-principal/pom.xml
+++ b/webservice-principal/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>logging-interceptor</artifactId>
             <version>3.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
